--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body {
+    margin: 0;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    color: #c8c8c8;
+    background-color: #2a2a2a;
+}
+
+h1 {
+    font-size: 38.5px;
+    font-weight: bold;
+}
+
+.container {
+    border: 1px solid #AAAAAA;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 5px;
+}
