Première version jouable.

--- a/src/app/component/crafting-display/crafting-display.component.html
+++ b/src/app/component/crafting-display/crafting-display.component.html
@@ -1,3 +1,7 @@
 <div class="container">
-    <h1>Crafting</h1>
+  <h1>Crafting</h1>
+  <div class="extracting-items">
+    <app-extracting-item-display *ngFor="let craftingItem of craftingItems" 
+      [extractingInfo]="craftingItem"></app-extracting-item-display>
   </div>
+</div>
