--- a/src/app/component/extracting-display/extracting-display.component.html
+++ b/src/app/component/extracting-display/extracting-display.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <h1>Extraction</h1>
   <div class="extracting-items">
-    <app-extracting-item-display *ngFor="let key of extractingItemsKeys" 
-      [category]="key"
-      [extractingItems]="extractingItems[key]"></app-extracting-item-display>
+    <app-extracting-item-display *ngFor="let extractingItem of extractingItems" 
+      [extractingInfo]="extractingItem"></app-extracting-item-display>
   </div>
 </div>
