--- a/src/app/component/game/game.component.html
+++ b/src/app/component/game/game.component.html
@@ -1,8 +1,19 @@
+<div class="menu">
+  <a href="javascript:void(0)" (click)="saveGame()">Save game</a>
+  <a href="javascript:void(0)" (click)="resetGame()">Reset game</a>
+</div>
+<div class="game-alert">
+  <div class="alert alert-success" *ngIf="displayGameSavedAlert">Game has been saved !</div>
+  <div class="alert alert-warning" *ngIf="!hasLocalStorage">Your browser does not support localStorage, game will not be saved !</div>
+</div>
 <div>
   <app-production-display></app-production-display>
 </div>
 <div>
   <app-extracting-display></app-extracting-display>
+</div>
+<div>
+  <app-furnace-display></app-furnace-display>
 </div>
 <div>
   <app-crafting-display></app-crafting-display>
