--- a/src/app/component/stock-info-display/stock-info-display.component.html
+++ b/src/app/component/stock-info-display/stock-info-display.component.html
@@ -1,11 +1,11 @@
 <div class="stock-info-card">
   <div class="stock-info-card-data">
-    <img src="{{resource.icon}}" title="{{resource.name}}" [ngClass]="{'can-mine': resource.canBeMined}" (click)="mineResource()" />
-    <div *ngIf="resource.canBeMined" class="mining-pb">
+    <img src="{{resource.icon}}" title="{{resource.name}}" [ngClass]="{'can-mine': resource.handCrafted && game.canBuild(resource)}" (click)="mineResource()" height="32" width="32" />
+    <div *ngIf="resource.handCrafted" class="mining-pb">
       <div class="mining-pb-progress" [ngStyle]="{'width':progressBarWidth + '%'}"></div>
     </div>
   </div>
   <div>
-    <span class="total">{{stock}}</span> (<span class="producing">+{{producing}}</span> / <span class="consuming">-{{consuming}}</span>)
+    <span class="total">{{stock | number:'1.2-2'}}</span> (<span class="producing">+{{producing | number:'1.2-2'}}</span> / <span class="consuming">-{{consuming | number:'1.2-2'}}</span>)
   </div>
 </div>
