--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,12 @@ h1 {
     margin-bottom: 20px;
     padding: 5px;
 }
+
+a {
+    color: #e69100;
+}
+
+a:hover, a:focus {
+    color: #e69100;
+    text-decoration: underline;
+}
