Gestion des liquides et recettes extraction pétrole brut.

--- a/src/app/component/crafting-display/crafting-display.component.html
+++ b/src/app/component/crafting-display/crafting-display.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Crafting</h1>
+  <h1>Producing area</h1>
   <div class="extracting-items">
     <app-extracting-item-display *ngFor="let craftingItem of craftingItems" 
       [extractingInfo]="craftingItem"></app-extracting-item-display>
