--- a/src/app/component/extracting-display/extracting-display.component.html
+++ b/src/app/component/extracting-display/extracting-display.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Extraction</h1>
+  <h1>Extracting area</h1>
   <div class="extracting-items">
     <app-extracting-item-display *ngFor="let extractingItem of extractingItems" 
       [extractingInfo]="extractingItem"></app-extracting-item-display>
