--- a/src/app/component/furnace-display/furnace-display.component.html
+++ b/src/app/component/furnace-display/furnace-display.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Smelting Area</h1>
+  <h1>Transforming area</h1>
   <div class="extracting-items">
     <app-extracting-item-display *ngFor="let furnacing of furnacingItems" 
       [extractingInfo]="furnacing"></app-extracting-item-display>
