--- a/src/app/component/production-display/production-display.component.css
+++ b/src/app/component/production-display/production-display.component.css
@@ -1,6 +1,6 @@
 .stock-info-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
 }
