Avancement sur les ressources à fabriquer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="logo">
-        <img src="../assets/factorio-logo.png" title="Idle Factorio" />
+        <img src="assets/factorio-logo.png" title="Idle Factorio" />
     </div>
     <app-game></app-game>
 </div>
