--- a/src/app/component/game/game.component.html
+++ b/src/app/component/game/game.component.html
@@ -1,8 +1,11 @@
 <div class="menu">
   <a href="javascript:void(0)" (click)="saveGame()">Save game</a>&nbsp;-&nbsp;
-  <a href="javascript:void(0)" (click)="resetGame()">Reset game</a>&nbsp;-&nbsp;
+  <a href="javascript:void(0)">Export save</a>&nbsp;-&nbsp;
+  <a href="javascript:void(0)">Import save</a>&nbsp;-&nbsp;
+  <a href="javascript:void(0)">Achievements</a>&nbsp;-&nbsp;
   <a href="javascript:void(0)">Help</a>&nbsp;-&nbsp;
-  <a href="javascript:void(0)">Credits</a>
+  <a href="javascript:void(0)">Credits</a>&nbsp;-&nbsp;
+  <a href="javascript:void(0)" (click)="resetGame()">Reset game</a>
 </div>
 <div class="game-alert">
   <div class="alert alert-success" *ngIf="displayGameSavedAlert">Game has been saved !</div>
