--- a/src/app/component/stock-info-display/stock-info-display.component.css
+++ b/src/app/component/stock-info-display/stock-info-display.component.css
@@ -58,6 +58,10 @@ span.total {
     opacity: 0.85;
 }
 
+.ingredient {
+    margin: 3px;
+}
+
 .counter {
     display: flex;
     flex-direction: column;
