--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <div class="logo">
         <img src="assets/factorio-logo.png" title="Idle Factorio" />
     </div>
-    <app-game></app-game>
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
 </div>
