--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
   <a routerLink="/game">Main</a>&nbsp;-&nbsp;
-  <a routerLink="/research">Research</a>&nbsp;-&nbsp;
+  <a routerLink="/research">Technologies</a>&nbsp;-&nbsp;
   <a routerLink="/achivements">Achievements</a>&nbsp;-&nbsp;
   <a href="javascript:void(0)" (click)="saveGame()">Save game</a>&nbsp;-&nbsp;
   <a href="javascript:void(0)">Export/import save</a>&nbsp;-&nbsp;
