Avancement sur les technologies.

--- a/src/app/component/research-item/research-item.component.css
+++ b/src/app/component/research-item/research-item.component.css
@@ -1,11 +1,16 @@
 .research-item {
     background-color: #444;
     padding: 10px;
-    width: 158px;
+    width: 180px;
+    min-height: 410px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 .research {
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .locked {
