Filling up game data for all science pack. Import/export saved game by base64 string.

--- a/src/app/component/credits/credits.component.html
+++ b/src/app/component/credits/credits.component.html
@@ -1,3 +1,10 @@
+<h1>Credits</h1>
 <p>
-  credits works!
+  This game is strongly inspired by <a href="https://www.factorio.com/" traget="_blank">Factorio</a>, a game in which you build and maintain factories.
 </p>
+<p>If you like this browser game, you will love Factorio :) and I strongly advise you to 
+    <a href="https://www.factorio.com/download-demo" target="_blank">try it</a> or <a href="https://www.factorio.com/buy" target="_blank">buy it</a>.</p>
+<p>This browser game is just a fan work and I'm not related to the game staff. All icons and images are under the copyright of Wube Software 
+  (see <a href="https://www.factorio.com/" traget="_blank">factorio.com</a> for more information).</p>
+<p>The source code of this game is hosted <a href="https://github.com/sangellozn/idlefactorio" target="_blank">here</a>.</p>
+<p></p>
