--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <a routerLink="/research">Technologies</a>&nbsp;-&nbsp;
   <a routerLink="/achivements">Achievements</a>&nbsp;-&nbsp;
   <a href="javascript:void(0)" (click)="saveGame()">Save game</a>&nbsp;-&nbsp;
-  <a href="javascript:void(0)">Export/import save</a>&nbsp;-&nbsp;
+  <a routerLink="/expimp">Export/import save</a>&nbsp;-&nbsp;
   <a routerLink="/help">Help</a>&nbsp;-&nbsp;
   <a routerLink="/credits">Credits</a>&nbsp;-&nbsp;
   <a href="javascript:void(0)" (click)="resetGame()">Reset game</a>
