--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,3 +8,10 @@
     padding-bottom: 25px;
     text-align: center;
 }
+
+h1 {
+    font-variant: small-caps;
+    font-style: italic;
+    font-size: 50px;
+    font-weight: bold;
+}
