--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main-container">
     <div class="logo">
+        <h1>Idle</h1>
         <img src="assets/factorio-logo.png" title="Idle Factorio" />
     </div>
     <app-nav-bar></app-nav-bar>
