"Final" tech tree. Items are filtered by searched technologies. Saving and restoring technology progression.

--- a/src/app/component/extracting-item-display/extracting-item-display.component.css
+++ b/src/app/component/extracting-item-display/extracting-item-display.component.css
@@ -35,11 +35,11 @@
     margin-bottom: 3px;
 }
 
-.recipe .ingredient .qty {
+.qty {
     font-weight: bold;
 }
 
-.recipe .ingredient .not-enougth {
+.not-enougth {
     color: red;
     opacity: 0.85;
 }
