--- a/src/app/component/research-item/research-item.component.css
+++ b/src/app/component/research-item/research-item.component.css
@@ -1,8 +1,8 @@
 .research-item {
     background-color: #444;
     padding: 10px;
-    width: 180px;
-    min-height: 410px;
+    width: 200px;
+    min-height: 510px;
     margin-top: 3px;
     margin-bottom: 3px;
 }
@@ -11,6 +11,7 @@
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
+    padding: 5px;
 }
 
 .locked {
