Bonus with lab for research speed.

--- a/src/app/component/electricity-display/electricity-display.component.html
+++ b/src/app/component/electricity-display/electricity-display.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Power generation</h1>
+  <h1>Power</h1>
   <div class="extracting-items">
       <app-extracting-item-display [extractingInfo]="powering"></app-extracting-item-display>
     </div>
