--- a/src/app/component/game/game.component.html
+++ b/src/app/component/game/game.component.html
@@ -1,12 +1,15 @@
 <div>
   <app-production-display></app-production-display>
 </div>
-<div class="extract-elec">
-  <div>
+<div class="extract-elec-bonus">
+  <div class="extract">
     <app-extracting-display></app-extracting-display>
   </div>
-  <div>
+  <div class="elec">
     <app-electricity-display></app-electricity-display>
+  </div>
+  <div class="bonus">
+    <app-bonus></app-bonus>
   </div>
 </div>
 <div>
